# matterregistry

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  check.sh  docker-compose.yml  pyproject.toml  repository.yaml  test.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
addon/: CHANGELOG.md  config.yaml
addon/translations/: de.yaml  en.yaml  es.yaml  et.yaml  fi.yaml  fr.yaml  hi.yaml  it.yaml  ja.yaml  pl.yaml  pt.yaml  uk.yaml  zh.yaml
app/: __main__.py  app.py  audit.py  database.py  exporter.py  homekit.py  importer.py  matter.py  models.py  services.py  settings.py
app/api/: __init__.py  attachments.py  devices.py  export.py  import_.py  integrations.py  products.py  properties.py  schemas.py
app/i18n/: __init__.py  de.yaml  en.yaml  es.yaml  et.yaml  fi.yaml  fr.yaml  hi.yaml  it.yaml  ja.yaml  pl.yaml  pt.yaml  uk.yaml  zh.yaml
app/integrations/: __init__.py  base.py  correlate.py  data.py  polled.py
app/web/: routes.py
migrations/: env.py
migrations/versions/: 0028_baseline.py  0029_product_catalog.py
tests/integration/: test_attachments.py  test_audit.py  test_auto_sync.py  test_devices.py  test_export.py  test_ha_core.py  test_healthz.py  test_import.py  test_import_dry_run.py  test_integration_data.py  test_matter_payload.py  test_matter_server.py  test_otbr.py  test_properties.py  test_provenance.py  test_search.py  test_settings.py
tests/unit/: test_b13_device_actions.py  test_correlate_address.py  test_ha_backfill.py  test_ha_correlate.py  (+18 more)
(+36 files in other folders)
