[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matterregistry"
version = "0.3.12"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "python-matter-server>=6.0",
    "segno>=1.6",
    "zeroconf>=0.130",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
    "websockets>=13.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "vulture>=2.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
reportUnknownArgumentType = "none"
reportAttributeAccessIssue = "none"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long - handled by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E402", "F401"]
"tests/*" = ["F401"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false   # SQLModel workarounds generate false positives
exclude = ["migrations/"]
